# GenRMC

./: .gitignore  GenRMC.cabal  README.md  package-lock.json  stack.yaml  todo.md
app/: Examples.hs  TestAddition.hs  TestAnd.hs  TestAppend.hs  TestInterleaving.hs  TestTreeCalcNorm.hs  TestTreeCalcSearchInterleaving.hs  TestUnify.hs
src/: GenRMC.hs
src/GenRMC/: Core.hs  Examples.hs  Poly.hs  SBExp.hs  SExp.hs  Types.hs
src/GenRMC/Examples/: Addition.hs  TreeCalculus.hs  TreeCalculusNormed.hs
src/GenRMC/Superposition/: BFSSup.hs  DFSSup.hs  InterleavingSup.hs
src/GenRMC/Unify/: FirstOrder.hs
test/: Main.hs
