cabal-version:      3.0
name:               GenRMC
version:            0.1.0.0
synopsis:           Generic Relational Model Checking
license:            BSD-3-Clause
author:             Anonymous
maintainer:         anonymous@example.com
category:           Logic

library
  exposed-modules:
    GenRMC
    GenRMC.Core
    GenRMC.Types
    GenRMC.SExp
    GenRMC.Examples
    GenRMC.Poly
  build-depends:
    base >=4.14 && <5,
    containers,
    mtl,
    free
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat

test-suite genrmc-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base,
    GenRMC,
    hspec,
    containers,
    free
  default-language: Haskell2010

executable test-addition
  main-is:          TestAddition.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC
  default-language: Haskell2010

executable test-append
  main-is:          TestAppend.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free
  default-language: Haskell2010
  
executable test-unify
  main-is:          TestUnify.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free,
    hspec
  default-language: Haskell2010