cabal-version:      3.0
name:               GenRMC
version:            0.1.0.0
synopsis:           Generic Relational Model Checking
license:            BSD-3-Clause
author:             Anonymous
maintainer:         anonymous@example.com
category:           Logic

library
  exposed-modules:
    GenRMC
    GenRMC.Core
    GenRMC.Types
    GenRMC.SExp
    GenRMC.Examples.Addition
    GenRMC.Examples.TreeCalculus
    GenRMC.Examples.TreeCalculusNormed
    GenRMC.Poly
    GenRMC.Superposition.DFSSup
    GenRMC.Superposition.BFSSup
    GenRMC.Superposition.InterleavingSup
    GenRMC.Unify.FirstOrder
  build-depends:
    base >=4.14 && <5,
    containers,
    mtl,
    free
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat

test-suite genrmc-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base,
    GenRMC,
    hspec,
    containers,
    free
  default-language: Haskell2010

executable test-addition
  main-is:          TestAddition.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC
  default-language: Haskell2010

executable test-append
  main-is:          TestAppend.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free
  default-language: Haskell2010
  
executable test-unify
  main-is:          TestUnify.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free,
    hspec
  default-language: Haskell2010
  
executable test-interleaving
  main-is:          TestInterleaving.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free
  default-language: Haskell2010

executable test-and
  main-is:          TestAnd.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free
  default-language: Haskell2010

executable test-tree-calc-norm
  main-is:          TestTreeCalcNorm.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free
  default-language: Haskell2010

executable test-tree-calc-search-interleaving
  main-is:          TestTreeCalcSearchInterleaving.hs
  hs-source-dirs:   app
  build-depends:
    base,
    GenRMC,
    containers,
    free
  default-language: Haskell2010